2006-12-04 Mathieu Blondel <mblondel@cvs.gnome.org>

    * tools/epwing2dictd.rb: added EPWING to dictd format converter
    * tools/README: updated for epwing2dictd.rb

2006-11-30 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: pressing "escape" made Fantasdic crash

2006-11-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/config/default.yaml:
    * data/fantasdic/glade/preferences_dialog.glade:
    * lib/fantasdic/ui.rb:
    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/preferences_dialog.rb: new options "show fantasdic in
    tray" and "do not quit when main window is closed"

    * release 1.0-beta2


2006-11-20 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: also close scan_clipboard thread if needed
    * lib/fantasdic/ui/result_text_view.rb: remove marks when text buffer is
    cleared

    * fantasdic.sgml: docbook man page
    * make_release.sh: man page

    * fantasdic.desktop: fixed category and icon

    * lib/fantasdic/ui/main_app.rb: was displaying wrong message in status bar
    and close connection when a thread is killed.

2006-11-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: use focus-out-event
    * lib/fantasdic/ui/main_app.rb: close look up thread before quitting or
    when looking up a word while a thread is still alive

2006-11-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * NEWS: preparing upcoming release 1.0-beta2
    * make_release.sh: upload packages

    * bin/pre-setup.rb: added bugzilla
    * lib/fantasdic.rb: added bugzilla and translators

2006-11-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade:
    * data/fantasdic/glade/server_infos_dialog.glade:
    * lib/fantasdic/command_line.rb:
    * lib/fantasdic/preferences.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb:
    * lib/fantasdic/ui/result_text_view.rb: